--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
                 <configuration>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>me.border.kalonbot.Main</mainClass> <!-- You have to replace this with a path to your main class like my.path.Main -->
+                            <mainClass>me.border.trialbot.Main</mainClass> <!-- You have to replace this with a path to your main class like my.path.Main -->
                         </transformer>
                     </transformers>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
